trying with the latest cbt from master

--- a/rebar.config
+++ b/rebar.config
@@ -28,5 +28,5 @@
 {deps, [
     %% BTREE library
     {cbt, ".*", {git, "https://github.com/benoitc/cbt.git",
-                 {tag, "1.2.2"}}}
+                 {branch, "master"}}}
 ]}.
